--- a/index.html
+++ b/index.html
@@ -247,5 +247,4 @@
             </form>
             <p>رابط التواصل الشخصي: <a href="https://www.facebook.com/people/Emad-Mohammed/61559856189266/" target="_blank">Facebook</a></p>
             <div class="share-buttons">
-                <a href="https://www.facebook.com/sharer/sharer.php?u=https://www.example.com" target="_blank">Share on Facebook</a>
-                <
+                <a href="https://www.facebook.com/sharer/sharer.php?u=https://dromdastar.github.io/my-personal-page/" target="_blank
